# open-mcp-agents

./: .gitignore  .pre-commit-config.yaml  README.md  client.py  docker-compose.yaml  main.py  pyproject.toml  weatherserver.py
app/: Dockerfile  client.py  pyproject.toml
mcp-servers/math-server/: mathserver.py
mcp-servers/todo-server/: app.py  pyproject.toml
mcp-servers/weather-server/: Dockerfile  app.py  pyproject.toml
