[project]
name = "open-mcp-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-groq>=0.3.4",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.0",
    "mcp>=1.10.1",
    "pre-commit>=4.2.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv.workspace]
members = [
    "mcp-servers/weather-server",
    "app",
]
